# kdev-xml

./: CMakeLists.txt  kdev-xml.kdev4
document/: CMakeLists.txt  kdevxmldocument.desktop  kdevxmldocument.desktop.cmake
formatter/: CMakeLists.txt  formatterplugin.cpp  formatterplugin.h  kdevsgmlformatter.desktop  kdevsgmlformatter.desktop.cmake
language/: CMakeLists.txt  kdevsgmlsupport.desktop  kdevsgmlsupport.desktop.cmake  languagesupport.cpp  languagesupport.h  parsejob.cpp  parsejob.h
language/completion/: sgmlcodecompletionmodel.cpp
language/duchain/: abstractbuilder.h
language/duchain/navigation/: navigationwidget.cpp
language/duchain/parser/: dtdhelper.cpp  sgml.g
language/duchain/tests/: duchaintestbase.h
validator/: CMakeLists.txt  kdevxmlvalidator.desktop  kdevxmlvalidator.desktop.cmake  xmlschemadialog.cpp  xmlvalidatorjob.cpp  xmlvalidatorplugin.cpp
xmlcatalog/: CMakeLists.txt  icatalogmanager.cpp
xmlcatalogui/: CMakeLists.txt  kdevxmlcatalogui.desktop  kdevxmlcatalogui.desktop.cmake  xmlcatalogdialog.cpp
